# cicd-example

./: README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_example.py
